Automatic registration of serializers/deserializers bound to @JsonSerialize/@JsonDeserialize annotations